# gaus_newton

./: .gitignore  CMakeLists.txt  build.sh
plots/: csv_plt.py  dinamic_system_animation.py  dinamic_system_plt.py  noise_dinamic_system.py  requirement.txt
src/: choleskysolver.hpp  integrate.hpp  inverse_problem.hpp  main.cpp  matrix.hpp  matrix_csv_file_loader.hpp  noise.hpp  param.hpp  test_solver.cpp
